--- a/proyectoToDo/src/components/tareas/Tareas.css
+++ b/proyectoToDo/src/components/tareas/Tareas.css
@@ -1,8 +1,15 @@
-body {
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #74b9ff, #a29bfe);
-  margin: 0;
+html, body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: #74b9ff;
+  margin: o;
   padding: 0;
+}
+
+.input{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .contenedorPrincipal{
@@ -22,6 +29,8 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #tareas {
+  flex: 1;
+  min-width: 200px;
   width: 70%;
   padding: 10px;
   border: 1px solid #dcdde1;
@@ -37,15 +46,22 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   box-shadow: 0 0 5px rgba(116, 185, 255, 0.6);
 }
 
+.noTareas {
+  text-align: center;
+  font-size: 18px;
+  color: #555;
+  margin-top: 20px;
+}
+
 
 ul {
   list-style: none;
   padding: 15px;
-  margin: 20px auto 0 auto;
+  margin: 20px auto 25px auto;
   background: #f9f9f9;
   border: 1px solid #dcdde1;
   border-radius: 10px;
-  width: 350%; 
+  width: 100%;
   max-width: 550px;
   text-align: center;
 }
@@ -54,7 +70,7 @@ li {
   padding: 10px 12px;
   font-size: 20px;
   color: #2d3436;
-  margin: 6px 0;
+  margin: 6px;
   border-radius: 6px;
   background: #ffffff;
   transition: background 0.3s ease;
@@ -73,7 +89,6 @@ li:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px;
   border-bottom: 1px solid #ccc;
 }
 
@@ -124,4 +139,4 @@ button:hover {
 .botones {
   display: flex;
   gap: 5px; 
-}
+} 
