--- a/proyectoToDo/src/components/header/Header.css
+++ b/proyectoToDo/src/components/header/Header.css
@@ -2,6 +2,12 @@
   display: flex;           /* para alinear horizontalmente */
   align-items: center;     /* centra verticalmente logo y título */
   gap: 10px;               /* espacio entre logo y título */
+  background: linear-gradient(90deg, #0d47a1, #1976d2, #42a5f5);
+  padding: 13px 25px;
+  border-radius: 8px; 
+  color: beige;
+  text-align: center;
+  justify-content: center;
 }
 
 .Logo {
